Working on store functionality.

--- a/SalmonCookiesStore/Pages/Index.cshtml
+++ b/SalmonCookiesStore/Pages/Index.cshtml
@@ -2,8 +2,8 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+    Layout = "_Layout";
 }
 
 <h1>Salmon Cookies Remake</h1>
 
-<a href="/About">Admin Dashboard</a>
