--- a/SalmonCookiesStore/Pages/Account/Login.cshtml
+++ b/SalmonCookiesStore/Pages/Account/Login.cshtml
@@ -1,4 +1,30 @@
 ﻿@page
 @model LoginModel
 @{
+    Layout = "_Layout";
+
 }
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Login Page</title>
+</head>
+<body>
+    <div class="container">
+        <div class="card-deck row" id="login_deck">
+            <div class="card mx-auto" style="max-width: 18em" id="login_card">
+                <form class="loginForm" method="post">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" />
+
+                    <label asp-for="Input.Password"></label>
+                    <input type="password" asp-for="Input.Password" />
+
+                    <button type="submit" id="login_button">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+
